--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     <header>
-        <h1>Doce Cacau Artes</h1>
+        <img src="logo.png" alt="400px" height="200px">
     </header>
+    <p id="data"></p>
     <section>
         <div id="logo">
-            <img src="logo.png" alt="logomarca">
+            upsetsdfsdfsdf
         </div>
         <div>
             
@@ -22,6 +23,7 @@
     <footer>
         <p>&copy; Doce Cacau Artes</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
 
