--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     </header>
     <p id="data"></p>
     <section>
-        <div id="logo">
-            upsetsdfsdfsdf
+        <div>
+            Pedacinhos de sonho embalados com carinho
         </div>
         <div>
             
